--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+backend-baseUrl=http://localhost:9003
 
 server.port =9003
 
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=indiafreeinternship@gmail.com
-spring.mail.password=xxxx xxxx xxxx xxxx
+spring.mail.username=raushankumar132abc@gmail.com
+spring.mail.password=xxxx xxx xxxx xxx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
