--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-backend-baseUrl=http://localhost:9003
+backend-baseUrl=https://api.star-path-astrology.me
 server.port=9003
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=indiafreeinternship@gmail.com
-spring.mail.password=xxxx xxxx xxxx xxxx
+spring.mail.password=semw nqat jiwb ozrc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
