--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-backend-baseUrl=https://api.star-path-astrology.me
+backend-baseUrl=https://api.testserieshub.in
 server.port=9003
 
 spring.mail.host=smtp.gmail.com
